--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Title of your CV site
+title: Siddharatha.H.Dhumale CV Site
 profile_img: /assets/img/profile.webp
 icon_img: /assets/img/icon.webp
 
