--- a/_data/Experience.yml
+++ b/_data/Experience.yml
@@ -5,69 +5,72 @@ contents:
   - title: Vodafone Intelligent Service Limited Pune, Maharashtra _VOIS
     role: Deputy General Manager
     description:
-      - Detail Design, IA(Interface Agreement), Interface Details Design (IDD),Coding, Unit Testing and Sub System Testing.
-      - Gap analysis & preparation of system requirement specifications
-      - Assist the team members in getting their project related queries answered and Process Compliance.
-      - Participate in technical screening for recruitment and Business process improvement.
-      - Performing and demonstrating Proof Of Concept well suited for better product enhancement
-      - Fostered and promoted cooperative and harmonious working climate conducive to maximum employee morale, productivity and effectiveness.
-      - Reviewed performance results to target and take corrective measures with authorization and escalation.
-      - Applied creative reasoning and logic to resolve complex and specialized managerial issues and develop sound solutions.
-      - Employed best practices and management controls to provide superior service to internal and external customers.
+      • Handled design, coding, testing, and interface agreements.
+      • Conducted gap analysis and prepared system requirements.
+      • Supported team queries and ensured process compliance.
+      • Contributed to recruitment and process improvement.
+      • Delivered proof of concept for product enhancement.
+      • Encouraged a positive work environment.
+      • Reviewed performance and implemented corrective actions.
+      • Resolved complex managerial issues with effective solutions.
+      • Applied best practices for customer service.
+      • Explored and integrated AI IDEs for development and testing.
+      • Participated in AI agent development using various frameworks and protocols i.e. Google ADK(Agent development Kit), CrewAI, AutoGen Ai , PocketFlow AI framework, Lanchain/Langgraph/Langflow and LangSmith,MCP (Model context Protocol), A2A
+        (Agent-2-Agent) Google framework, IBN ACP (Agent communication Protocol).
     date: Aug. 2013 - Ongoing
   - title: Exfo India Pvt Ltd Pune, Maharashtra 
     role: Technical Leader
     description: 
-      - Detail Design, IA(Interface Agreement), Interface Details Design (IDD),Coding, Unit Testing and Sub System Testing.
-      - Gap analysis & preparation of system requirement specifications
-      - Participate in technical screening for recruitment and Business process improvement.
-      - Release Management using CICD Pipeline Assisting Product Owner and Scrum master for smooth Operation and roll out of new features.
-      - Built strong relationships with customers through positive attitude and attentive response.
-      - Mentored and guided employees to foster proper completion of assigned duties.
-      - Established open and professional relationships with team members which helped resolve issues and conflicts quickly.
-      - Provided constructive criticism regarding quality assurance on collections team phone calls.
-      - Modeled exceptional customer service and mentored associates on direct link between revenue growth and customer loyalty
+      • Handled detail design, interface agreements (IA), interface details design (IDD), coding, unit testing, and subsystem testing.
+      • Conducted gap analysis and prepared system requirement specifications.
+      • Participated in technical screenings for recruitment and business process improvement.
+      • Managed releases using the CICD pipeline and supported the Product Owner and Scrum Master to ensure smooth operations and rollout of new features.
+      • Developed strong relationships with customers through a positive attitude and prompt responses.
+      • Mentored and guided employees to ensure proper completion of assigned tasks.
+      • Maintained open and professional relationships with team members, enabling quick resolution of issues and conflicts.
+      • Provided constructive feedback on quality assurance for team phone call collections.
+      • Demonstrated excellent customer service and mentored associates on the connection between revenue growth and customer loyaltys
     date: March. 2010 - Aug. 2013
   - title: Amdocs India Pvt Ltd Pune, Maharashtra
     role: Senior Subject Metter Expert
     description: 
-      - Detail Design, IA(Interface Agreement), Interface Details Design (IDD),Coding, Unit Testing and Sub System Testing.
-      - Developed and maintained courteous and effective working relationships.
-      - Created plans and communicated deadlines to ensure projects were completed on time.
-      - Devoted special emphasis to punctuality and worked to maintain outstanding attendance record, consistently arriving to work ready to start immediately.
-      - Drove operational improvements which resulted in savings and improved profit margins.
-      - Delivered Product to customer locations within specific timeframes.
-      - Proved successful working within tight deadlines and fast-paced atmosphere.
-      - Served customers in a friendly, efficient manner following outlined steps of service
+      •  Detail Design, IA(Interface Agreement), Details Design (IDD),Coding, Unit Testing and Sub System Testing.
+      • Developed and maintained courteous and effective working relationships.
+      • Created plans and communicated deadlines to ensure projects were completed on time.
+      • Devoted special emphasis to punctuality and worked to maintain outstanding attendance record, consistently arriving to work ready to start immediately.
+      • Drive operational improvements which resulted in savings and improved profit margins.
+      • Delivered Product to customer locations within specific timeframes.
+      • Proved successful working within tight deadlines and fast-paced atmosphere.
+      • Served customers in a friendly, efficient manner following outlined steps of service.
     date: Aug. 2007 - March. 2010
   - title: Atos Origin India Ltd. Mumbai, Maharashtra
     role: Software Engineer
     description: 
-      - Reviewed project specifications and designed technology solutions that met or exceeded performance expectations.
-      - Orchestrated efficient large-scale software deployments, including testing features and correcting code.
-      - Interfaced with cross-functional team of business analysts, developers and technical support professionals to determine comprehensive list of requirement specifications for new applications.
-      - Prepared detailed reports on updates to project specifications, progress, identified conflicts and team activities.
-      - Detail Design, IA(Interface Agreement), Interface Details Design (IDD),Coding, Unit Testing and Sub System Testing.
-      - Installed and configured software applications and tested solutions for functionality.
-      - Adjusted design parameters to boost performance and incorporate new features.
+      • Developed and implemented technology solutions meeting project requirements.
+      • Managed software deployments, tested features, and fixed code issues.
+      • Worked with business analysts, developers, and support to define requirements.
+      • Created reports on project updates and team progress.
+      • Oversaw design, interface agreements, coding, and testing.
+      • Installed, configured, and tested software applications.
+      • Updated designs to improve performance and add features.
     date: Jan. 2007 - Aug. 2007
   - title: Reliance Info Com Ltd. Mumbai, Maharashtra
     role: Senior Software Developer
     description: 
-      - Monitored ongoing operation of assigned programs and responded to problems by diagnosing and correcting logic and coding errors.
-      - Orchestrated efficient large-scale software deployments, including testing features and correcting code.
-      - Developed databases, programs and processes for integration and implementation across enterprise.
-      - Adjusted design parameters to boost performance and incorporate new features.
-      - Analysis of new business requirements, establishing requirements baseline and identify scope of work.
-      - Interfacing with Business for business rules and processes.
-      - Solution research and Business process improvement.
+      • Monitored ongoing operation of assigned programs and responded to problems by diagnosing and correcting logic and coding errors.
+      • Orchestrated efficient large-scale software deployments, including testing features and correcting code.
+      • Developed databases, programs and processes for integration and implementation across enterprise.
+      • Adjusted design parameters to boost performance and incorporate new features.
+      • Analysis of new business requirements, establishing requirements baseline and identify scope of work.
+      • Interfacing with Business for business rules and processes.
+      • Solution research and Business process improvement.
     date: April. 2006 - Jan. 2007  
   - title: System Plus Pvt. Ltd. Ahmedabad, Gujarat
     role: Associate Tech Lead
     description: 
-      - Detail Design, IA(Interface Agreement), Interface Details Design (IDD),Coding, Unit Testing and Sub System Testing.
-      - Participate in technical screening for recruitment and Business process improvement.
-      - Development and bug fixing
-      - Release Management using CICD Pipeline
-      - Assist the team members in getting their project related queries answered
+      • Accountable for detailed design, interface agreements (IA), interface detailed design (IDD), coding, unit testing, and sub-system testing.
+      • Participate in technical recruitment screenings and support business process improvement efforts.
+      • Perform development activities and resolve bugs.
+      • Oversee release management using the CICD pipeline.
+      • Assist team members with their project-related questions.
     date: Dec. 2003 - March. 2006   
