--- a/_data/Experience.yml
+++ b/_data/Experience.yml
@@ -5,7 +5,7 @@ contents:
   - title: Vodafone Intelligent Service Limited Pune, Maharashtra _VOIS
     role: Deputy General Manager
     description:
-       • Handled design, coding, testing, and interface agreements.       
+       • Handled design, coding, testing, and interface agreements.\n   
        • Conducted gap analysis and prepared system requirements.
        • Supported team queries and ensured process compliance.
        • Contributed to recruitment and process improvement.
