Remove duplicate job descriptions in Experience.yml
Duplicated job descriptions for various roles in the Experience.yml file.

--- a/_data/Experience.yml
+++ b/_data/Experience.yml
@@ -5,71 +5,71 @@ contents:
   - title: Vodafone Intelligent Service Limited Pune, Maharashtra _VOIS
     role: Deputy General Manager
     description:
-       • Handled design, coding, testing, and interface agreements.   
-       • Conducted gap analysis and prepared system requirements.
-       • Supported team queries and ensured process compliance.
-       • Contributed to recruitment and process improvement.
-       • Delivered proof of concept for product enhancement.
-       • Encouraged a positive work environment.
-       • Reviewed performance and implemented corrective actions.
-       • Resolved complex managerial issues with effective solutions.
-       • Applied best practices for customer service.
-       • Explored and integrated AI IDEs for development and testing.
-       • Participated in AI agent development using various frameworks and protocols i.e. Google ADK(Agent development Kit), CrewAI, AutoGen Ai , PocketFlow AI framework, Lanchain/Langgraph/Langflow and LangSmith,MCP (Model context Protocol), A2A (Agent-2-Agent) Google framework, IBN ACP (Agent communication Protocol).
+       - Handled design, coding, testing, and interface agreements.   
+       - Conducted gap analysis and prepared system requirements.
+       - Supported team queries and ensured process compliance.
+       - Contributed to recruitment and process improvement.
+       - Delivered proof of concept for product enhancement.
+       - Encouraged a positive work environment.
+       - Reviewed performance and implemented corrective actions.
+       - Resolved complex managerial issues with effective solutions.
+       - Applied best practices for customer service.
+       - Explored and integrated AI IDEs for development and testing.
+       - Participated in AI agent development using various frameworks and protocols i.e. Google ADK(Agent development Kit), CrewAI, AutoGen Ai , PocketFlow AI framework, Lanchain/Langgraph/Langflow and LangSmith,MCP (Model context Protocol), A2A (Agent-2-Agent) Google framework, IBN ACP (Agent communication Protocol).
     date: Aug. 2013 - Ongoing
   - title: Exfo India Pvt Ltd Pune, Maharashtra 
     role: Technical Leader
     description: 
-      • Handled detail design, interface agreements (IA), interface details design (IDD), coding, unit testing, and subsystem testing.
-      • Conducted gap analysis and prepared system requirement specifications.
-      • Participated in technical screenings for recruitment and business process improvement.
-      • Managed releases using the CICD pipeline and supported the Product Owner and Scrum Master to ensure smooth operations and rollout of new features.
-      • Developed strong relationships with customers through a positive attitude and prompt responses.
-      • Mentored and guided employees to ensure proper completion of assigned tasks.
-      • Maintained open and professional relationships with team members, enabling quick resolution of issues and conflicts.
-      • Provided constructive feedback on quality assurance for team phone call collections.
-      • Demonstrated excellent customer service and mentored associates on the connection between revenue growth and customer loyaltys
+      - Handled detail design, interface agreements (IA), interface details design (IDD), coding, unit testing, and subsystem testing.
+      - Conducted gap analysis and prepared system requirement specifications.
+      - Participated in technical screenings for recruitment and business process improvement.
+      - Managed releases using the CICD pipeline and supported the Product Owner and Scrum Master to ensure smooth operations and rollout of new features.
+      - Developed strong relationships with customers through a positive attitude and prompt responses.
+      - Mentored and guided employees to ensure proper completion of assigned tasks.
+      - Maintained open and professional relationships with team members, enabling quick resolution of issues and conflicts.
+      - Provided constructive feedback on quality assurance for team phone call collections.
+      - Demonstrated excellent customer service and mentored associates on the connection between revenue growth and customer loyaltys
     date: March. 2010 - Aug. 2013
   - title: Amdocs India Pvt Ltd Pune, Maharashtra
     role: Senior Subject Metter Expert
     description: 
-      •  Detail Design, IA(Interface Agreement), Details Design (IDD),Coding, Unit Testing and Sub System Testing.
-      • Developed and maintained courteous and effective working relationships.
-      • Created plans and communicated deadlines to ensure projects were completed on time.
-      • Devoted special emphasis to punctuality and worked to maintain outstanding attendance record, consistently arriving to work ready to start immediately.
-      • Drive operational improvements which resulted in savings and improved profit margins.
-      • Delivered Product to customer locations within specific timeframes.
-      • Proved successful working within tight deadlines and fast-paced atmosphere.
-      • Served customers in a friendly, efficient manner following outlined steps of service.
+      -  Detail Design, IA(Interface Agreement), Details Design (IDD),Coding, Unit Testing and Sub System Testing.
+      - Developed and maintained courteous and effective working relationships.
+      - Created plans and communicated deadlines to ensure projects were completed on time.
+      - Devoted special emphasis to punctuality and worked to maintain outstanding attendance record, consistently arriving to work ready to start immediately.
+      - Drive operational improvements which resulted in savings and improved profit margins.
+      - Delivered Product to customer locations within specific timeframes.
+      - Proved successful working within tight deadlines and fast-paced atmosphere.
+      - Served customers in a friendly, efficient manner following outlined steps of service.
     date: Aug. 2007 - March. 2010
   - title: Atos Origin India Ltd. Mumbai, Maharashtra
     role: Software Engineer
     description: 
-      • Developed and implemented technology solutions meeting project requirements.
-      • Managed software deployments, tested features, and fixed code issues.
-      • Worked with business analysts, developers, and support to define requirements.
-      • Created reports on project updates and team progress.
-      • Oversaw design, interface agreements, coding, and testing.
-      • Installed, configured, and tested software applications.
-      • Updated designs to improve performance and add features.
+      - Developed and implemented technology solutions meeting project requirements.
+      - Managed software deployments, tested features, and fixed code issues.
+      - Worked with business analysts, developers, and support to define requirements.
+      - Created reports on project updates and team progress.
+      - Oversaw design, interface agreements, coding, and testing.
+      - Installed, configured, and tested software applications.
+      - Updated designs to improve performance and add features.
     date: Jan. 2007 - Aug. 2007
   - title: Reliance Info Com Ltd. Mumbai, Maharashtra
     role: Senior Software Developer
     description: 
-      • Monitored ongoing operation of assigned programs and responded to problems by diagnosing and correcting logic and coding errors.
-      • Orchestrated efficient large-scale software deployments, including testing features and correcting code.
-      • Developed databases, programs and processes for integration and implementation across enterprise.
-      • Adjusted design parameters to boost performance and incorporate new features.
-      • Analysis of new business requirements, establishing requirements baseline and identify scope of work.
-      • Interfacing with Business for business rules and processes.
-      • Solution research and Business process improvement.
+      - Monitored ongoing operation of assigned programs and responded to problems by diagnosing and correcting logic and coding errors.
+      - Orchestrated efficient large-scale software deployments, including testing features and correcting code.
+      - Developed databases, programs and processes for integration and implementation across enterprise.
+      - Adjusted design parameters to boost performance and incorporate new features.
+      - Analysis of new business requirements, establishing requirements baseline and identify scope of work.
+      - Interfacing with Business for business rules and processes.
+      - Solution research and Business process improvement.
     date: April. 2006 - Jan. 2007  
   - title: System Plus Pvt. Ltd. Ahmedabad, Gujarat
     role: Associate Tech Lead
     description: 
-      • Accountable for detailed design, interface agreements (IA), interface detailed design (IDD), coding, unit testing, and sub-system testing.
-      • Participate in technical recruitment screenings and support business process improvement efforts.
-      • Perform development activities and resolve bugs.
-      • Oversee release management using the CICD pipeline.
-      • Assist team members with their project-related questions.
+      - Accountable for detailed design, interface agreements (IA), interface detailed design (IDD), coding, unit testing, and sub-system testing.
+      - Participate in technical recruitment screenings and support business process improvement efforts.
+      - Perform development activities and resolve bugs.
+      - Oversee release management using the CICD pipeline.
+      - Assist team members with their project-related questions.
     date: Dec. 2003 - March. 2006   
